--- a/SistemaHospitalUNI/src/FramePrincipal/Logueo.form
+++ b/SistemaHospitalUNI/src/FramePrincipal/Logueo.form
@@ -99,7 +99,7 @@
               <SubComponents>
                 <Component class="javax.swing.JButton" name="btnInicio">
                   <Properties>
-                    <Property name="text" type="java.lang.String" value="Iniciar Sesion"/>
+                    <Property name="text" type="java.lang.String" value="Iniciar Sesi&#xf3;n"/>
                     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                       <Dimension value="[130, 38]"/>
                     </Property>
