--- a/SistemaHospitalUNI/src/InternalFrames/SectorAgregar.form
+++ b/SistemaHospitalUNI/src/InternalFrames/SectorAgregar.form
@@ -211,13 +211,13 @@
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="9">
                 <StringItem index="0" value="Seleccion una opcion...."/>
-                <StringItem index="1" value="Distrito I"/>
-                <StringItem index="2" value="Distrito II"/>
-                <StringItem index="3" value="Distrito III"/>
-                <StringItem index="4" value="Distrito IV"/>
-                <StringItem index="5" value="Distrito V"/>
-                <StringItem index="6" value="Distrito VI"/>
-                <StringItem index="7" value="Distrito VII"/>
+                <StringItem index="1" value="I"/>
+                <StringItem index="2" value="II"/>
+                <StringItem index="3" value="III"/>
+                <StringItem index="4" value="IV"/>
+                <StringItem index="5" value="V"/>
+                <StringItem index="6" value="VI"/>
+                <StringItem index="7" value="VII"/>
                 <StringItem index="8" value=" "/>
               </StringArray>
             </Property>
